# deja

./: .env.example  .gitignore  docker-compose.yml  project.md  pyproject.toml  requirements.txt  test_foundation.py
backend/: embeddings.py  knowledge_graph.py
backend/models/: __init__.py  pattern.py
data/scripts/: combine_datasets.py  index_patterns.py  transform_nvidia.py  transform_swebench.py
